# ragvri-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  HANDOFF.md  PRD.md  README.md  learning.md  pyproject.toml
chatbot/: __init__.py  __main__.py  cli.py  config.py  core.py  llm.py  mcp_client.py  memory.py  skill.py  tool_registry.py
chatbot/tools/: __init__.py  calculator.py  code_executor.py  datetime_tool.py  fetch_url.py  file_ops.py  mcp_filesystem_server.py  mcp_test_server.py  shell.py
skills/code-review/: SKILL.md
skills/code-review/scripts/: lint.sh
skills/debugger/: SKILL.md
skills/explainer/: SKILL.md
tests/: __init__.py  test_cli.py  test_config.py  test_core.py  test_fetch_url.py  test_llm.py  test_llm_tools.py  test_mcp_client.py  test_memory.py  test_phase3_tools.py  test_skill.py  test_tool_registry.py  test_tools.py
