[project]
name = "chatbot"
version = "0.1.0"
description = "An agentic chatbot built with litellm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["chatbot"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
